--- a/android/app/src/main/res/layout/activity_industry.xml
+++ b/android/app/src/main/res/layout/activity_industry.xml
@@ -6,7 +6,307 @@
     android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".view.IndustryActivity">
+    tools:context=".view.view.IndustryActivity">
+
+    <!-- TOP BANNER -->
+    <LinearLayout
+        android:id="@+id/topBanner"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:background="@drawable/card_background"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rounded_img"
+            app:srcCompat="@drawable/logo" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="7dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="USİ"
+                android:textColor="#FFFFFF"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Üniversite-Sanayi İşbirliği"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </LinearLayout>
+
+
+    <!--MAIN-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingVertical="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomLogos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topBanner">
+
+        <!-- Üst Alan: Mail, Şifre, Giriş, Geri Dön -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Sanayi Girişi"
+                android:textSize="30sp"
+                android:textColor="#000000"/>
+
+            <!--Mail-->
+            <EditText
+                android:id="@+id/industryMail"
+                android:layout_width="320dp"
+                android:layout_height="50dp"
+                android:layout_marginVertical="5dp"
+                android:background="@drawable/edittext_bg"
+                android:hint="Mailinizi Giriniz"
+                android:inputType="textEmailAddress"
+                android:padding="12dp"
+                android:textColor="#000000"
+                android:textColorHint="#999999"
+                android:textSize="16sp" />
+
+            <!--Şifre-->
+            <LinearLayout
+                android:layout_width="320dp"
+                android:layout_height="50dp"
+                android:layout_marginVertical="5dp"
+                android:background="@drawable/edittext_bg"
+                android:orientation="horizontal"
+                android:padding="12dp">
+
+                <EditText
+                    android:id="@+id/industryPassword"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:hint="Şifrenizi Giriniz"
+                    android:inputType="textPassword"
+                    android:textColor="#000000"
+                    android:textColorHint="#999999"
+                    android:textSize="16sp" />
+
+                <ImageView
+                    android:id="@+id/ivTogglePassword"
+                    android:layout_width="35dp"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="Şifreyi Göster"
+                    android:onClick="showPassword"
+                    android:padding="8dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/baseline_visibility_off_24"
+                    tools:ignore="OnClick" />
+            </LinearLayout>
+
+            <!--Giriş Yap Butonu-->
+            <Button
+                android:id="@+id/signIn"
+                android:layout_width="320dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="15dp"
+                android:backgroundTint="#F06E1B"
+                android:onClick="signIn"
+                android:elevation="8dp"
+                android:text="Giriş Yap"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:cornerRadius="10dp"
+                tools:ignore="OnClick" />
+
+            <!--Geri Dön Butonu-->
+            <Button
+                android:id="@+id/btnBack"
+                android:layout_width="320dp"
+                android:layout_height="50dp"
+                android:layout_marginVertical="12dp"
+                android:backgroundTint="#FFFFFF"
+                android:onClick="gotoBack"
+                android:elevation="8dp"
+                android:text="Geri Dön"
+                android:textColor="#F06E1B"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:cornerRadius="10dp"
+                app:strokeColor="#F06E1B"
+                app:strokeWidth="2dp"
+                tools:ignore="OnClick" />
+
+            <LinearLayout
+                android:layout_width="330dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="7dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:padding="8dp">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"
+                    android:background="#888" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="veya"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    android:textColor="#888"
+                    android:textStyle="bold" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"
+                    android:background="#888" />
+
+            </LinearLayout>
+
+            <!--Google-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/google"
+                    android:contentDescription="Google Logo"
+                    android:background="@android:color/white"
+                    android:scaleType="centerInside" />
+
+                <TextView
+                    android:id="@+id/signInWithGoogle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="8dp"
+                    android:textColor="#4061FF"
+                    android:textStyle="bold"
+                    android:textSize="15sp"
+                    android:text="Continue with Google Account"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <!-- Alt Alan: Kayıt Ol -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="1dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Daha önce kayıt olmadın mı ? "
+                android:textColor="#000000"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/signUpIndustry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="signUpIndustry"
+                android:text="Kayıt Ol"
+                android:textColor="#F06E1B"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:ignore="OnClick" />
+        </LinearLayout>
+    </LinearLayout>
+
+
+    <!--FOOTER-->
+    <LinearLayout
+        android:id="@+id/bottomLogos"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:background="@drawable/card_background"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_img"
+            android:clipToOutline="true"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/logo" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/valilik" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_img"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/kosgeb" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_img"
+            android:clipToOutline="true"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/stb" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
