--- a/android/app/src/main/res/layout/activity_industry_main.xml
+++ b/android/app/src/main/res/layout/activity_industry_main.xml
@@ -3,8 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="#EFEEF5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.view.IndustryMainActivity">
+
+
+    <!-- NAV HOST FRAGMENT: BottomNavigationView yukarıda kalacak -->
+    <fragment
+        android:id="@+id/nav_host_industry_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph_industry"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_industry"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- ALT NAVIGATION: ekranın en altında -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation_industry"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:background="#FFFFFF"
+        app:itemIconSize="24dp"
+        app:itemIconTint="#1A9AAF"
+        app:itemTextColor="#1A9AAF"
+        app:menu="@menu/bottom_nav_menu_industry"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
